syntax = "proto3";

package taggy;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "genproto/taggy";

message Tag {
  string id = 1;
  string name = 2;
}

service RSSService {
  rpc CreateRSSFeed(CreateRSSFeedRequest) returns (CreateRSSFeedReply){}
  rpc GetRSSFeed(GetRSSFeedRequest) returns (GetRSSFeedReply){}
  rpc ListRSSFeeds(ListRSSFeedsRequest) returns (ListRSSFeedsReply){}
  rpc GetRSSItem(GetRSSItemRequest) returns (GetRSSItemReply){}
  rpc ListRSSFeedItems (ListRSSFeedItemsRequest) returns (ListRSSFeedItemsReply) {}
  rpc FetchAllRSS (FetchAllRSSRequest) returns (FetchAllRSSReply){}

  // To support local test only
  rpc ForceFetchOriginItems(google.protobuf.Empty) returns (google.protobuf.Empty){}
}
message RSSFeed {
  string id = 1;
  string name = 2;
  string description = 3;
  string url = 4;
  string img_url = 5;
  google.protobuf.Timestamp last_updated_at = 6;
}

message RSSItem {
  string id = 1;
  string feed_id = 2;
  string title = 3;
  string content = 4;
  string description = 5;
  string url = 6;
  google.protobuf.Timestamp published_at = 7;
}

message CreateRSSFeedRequest {
  string url = 1;
}

message CreateRSSFeedReply {
  RSSFeed feed = 1;
}

message GetRSSFeedRequest {
  string feedId = 1;
}

message GetRSSFeedReply {
  RSSFeed feed = 1;
}

message ListRSSFeedsRequest {
}

message ListRSSFeedsReply {
  repeated RSSFeed feeds = 1;
}

message GetRSSItemRequest {
  string itemId = 1;
}

message GetRSSItemReply {
  RSSItem item = 1;
}

message ListRSSFeedItemsRequest {
  string feedId = 1;
}

message ListRSSFeedItemsReply {
  repeated RSSItem items = 1;
}

message FetchAllRSSRequest {
}

message FetchAllRSSReply {
  string message = 1;
}


service RecommendationService {
  rpc GetRSSItemTags (GetRSSItemTagsRequest) returns (GetRSSItemTagsReply) {}
}

message GetRSSItemTagsRequest {
  string itemId = 1;
}

message GetRSSItemTagsReply {
  repeated Tag tags = 1;
}